--- a/location_services/python_training/j_pythonbasics.ipynb
+++ b/location_services/python_training/j_pythonbasics.ipynb
@@ -14,15 +14,547 @@
     }
    ],
    "source": [
-    "print(\"Hello, World!\")\n"
+    "print(\"Hello, World!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "variables and types (strings, float, integer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "String: hello\n",
+      "Float: 10.000000\n",
+      "Integer: 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "mystring = \"hello\"\n",
+    "myfloat = 10.0\n",
+    "myint = 20\n",
+    "\n",
+    "if mystring == \"hello\":\n",
+    "    print(\"String: %s\" % mystring)\n",
+    "if isinstance(myfloat, float) and myfloat == 10.0:\n",
+    "    print(\"Float: %f\" % myfloat)\n",
+    "if isinstance(myint, int) and myint == 20:\n",
+    "    print(\"Integer: %d\" % myint)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "['hello', 'world']\n",
+      "The second name on the names list is Eric\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = []\n",
+    "strings = []\n",
+    "names = [\"John\", \"Eric\", \"Jessica\"]\n",
+    "\n",
+    "numbers.append(1)\n",
+    "numbers.append(2)\n",
+    "numbers.append(3)\n",
+    "strings.append(\"hello\")\n",
+    "strings.append(\"world\")\n",
+    "second_name = names[1]\n",
+    "\n",
+    "# this code should write out the filled arrays and the second name in the names \n",
+    "# list (Eric).\n",
+    "\n",
+    "print(numbers)\n",
+    "print(strings)\n",
+    "print(\"The second name on the names list is %s\" % second_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "basic operators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_list contains 10 objects\n",
+      "y_list contains 10 objects\n",
+      "big_list contains 20 objects\n",
+      "Almost there...\n",
+      "Great!\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = object()\n",
+    "y = object()\n",
+    "\n",
+    "x_list = [x] * 10\n",
+    "y_list = [y] * 10\n",
+    "big_list = x_list + y_list\n",
+    "\n",
+    "print(\"x_list contains %d objects\" % len(x_list))\n",
+    "print(\"y_list contains %d objects\" % len(y_list))\n",
+    "print(\"big_list contains %d objects\" % len(big_list))\n",
+    "\n",
+    "# testing code\n",
+    "if x_list.count(x) == 10 and y_list.count(y) == 10:\n",
+    "    print(\"Almost there...\")\n",
+    "if big_list.count(x) == 10 and big_list.count(y) == 10:\n",
+    "    print(\"Great!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "string formatting\n",
+    "\n",
+    "%s - String (or any object with a string representation, like numbers)\n",
+    "%d - Integers\n",
+    "%f - Floating point numbers\n",
+    "%.<number of digits>f - Floating point numbers with a fixed amount of digits to the right of the dot.\n",
+    "%x/%X - Integers in hex representation (lowercase/uppercase)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello John Doe. Your current balance is $53.44.\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = (\"John\", \"Doe\", 53.44)\n",
+    "format_string = \"Hello %s %s. Your current balance is $%s.\"\n",
+    "\n",
+    "# format string feel redunant \n",
+    "# in this tutorial why would %s be better than %.2f?\n",
+    "\n",
+    "print(format_string % data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "basic string operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of s = 20\n",
+      "The first occurrence of the letter a = 8\n",
+      "a occurs 2 times\n",
+      "The first five characters are 'Strin'\n",
+      "The next five characters are 'gs ar'\n",
+      "The thirteenth character is 'a'\n",
+      "The characters with odd index are 'tig r wsm!'\n",
+      "The last five characters are 'some!'\n",
+      "String in uppercase: STRINGS ARE AWESOME!\n",
+      "String in lowercase: strings are awesome!\n",
+      "String starts with 'Str'. Good!\n",
+      "String ends with 'ome!'. Good!\n",
+      "Split the words of the string: ['Strings', 'are', 'awesome!']\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"Strings are awesome!\"\n",
+    "# Length should be 20\n",
+    "print(\"Length of s = %d\" % len(s))\n",
+    "\n",
+    "# First occurrence of \"a\" should be at index 8\n",
+    "print(\"The first occurrence of the letter a = %d\" % s.index(\"a\"))\n",
+    "\n",
+    "# Number of a's should be 2\n",
+    "print(\"a occurs %d times\" % s.count(\"a\"))\n",
+    "\n",
+    "# Slicing the string into bits\n",
+    "print(\"The first five characters are '%s'\" % s[:5]) # Start to 5\n",
+    "print(\"The next five characters are '%s'\" % s[5:10]) # 5 to 10\n",
+    "print(\"The thirteenth character is '%s'\" % s[12]) # Just number 12\n",
+    "print(\"The characters with odd index are '%s'\" %s[1::2]) #(0-based indexing)\n",
+    "print(\"The last five characters are '%s'\" % s[-5:]) # 5th-from-last to end\n",
+    "\n",
+    "# Convert everything to uppercase\n",
+    "print(\"String in uppercase: %s\" % s.upper())\n",
+    "\n",
+    "# Convert everything to lowercase\n",
+    "print(\"String in lowercase: %s\" % s.lower())\n",
+    "\n",
+    "# Check how a string starts\n",
+    "if s.startswith(\"Str\"):\n",
+    "    print(\"String starts with 'Str'. Good!\")\n",
+    "    \n",
+    "# Check how a string ends\n",
+    "if s.endswith(\"ome!\"):\n",
+    "    print(\"String ends with 'ome!'. Good!\")\n",
+    "\n",
+    "# Split the string into three separate strings,\n",
+    "# each containing only a word\n",
+    "print(\"Split the words of the string: %s\" % s.split(\" \"))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "conditions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# what does if first_array and if not second_number mean?\n",
+    "\n",
+    "number = 16\n",
+    "second_number = 0\n",
+    "first_array = [1, 3, 4]\n",
+    "second_array = [1,3]\n",
+    "\n",
+    "if number > 15:\n",
+    "    print(\"1\")\n",
+    "\n",
+    "if first_array:\n",
+    "    print(\"2\")\n",
+    "\n",
+    "if len(second_array) == 2:\n",
+    "    print(\"3\")\n",
+    "\n",
+    "if len(first_array) + len(second_array) == 5:\n",
+    "    print(\"4\")\n",
+    "\n",
+    "if first_array and first_array[0] == 1:\n",
+    "    print(\"5\")\n",
+    "\n",
+    "if not second_number:\n",
+    "    print(\"6\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "loops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "951\n",
+      "402\n",
+      "984\n",
+      "651\n",
+      "360\n",
+      "69\n",
+      "408\n",
+      "319\n",
+      "601\n",
+      "485\n",
+      "980\n",
+      "507\n",
+      "725\n",
+      "547\n",
+      "544\n",
+      "615\n",
+      "83\n",
+      "165\n",
+      "141\n",
+      "501\n",
+      "263\n",
+      "617\n",
+      "865\n",
+      "575\n",
+      "219\n",
+      "390\n",
+      "984\n",
+      "592\n",
+      "236\n",
+      "105\n",
+      "942\n",
+      "941\n",
+      "386\n",
+      "462\n",
+      "47\n",
+      "418\n",
+      "907\n",
+      "344\n",
+      "236\n",
+      "375\n",
+      "823\n",
+      "566\n",
+      "597\n",
+      "978\n",
+      "328\n",
+      "615\n",
+      "953\n",
+      "345\n",
+      "399\n",
+      "162\n",
+      "758\n",
+      "219\n",
+      "918\n",
+      "237\n",
+      "number equals 237, loop breaks\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [\n",
+    "    951, 402, 984, 651, 360, 69, 408, 319, 601, 485, 980, 507, 725, 547, 544,\n",
+    "    615, 83, 165, 141, 501, 263, 617, 865, 575, 219, 390, 984, 592, 236, 105, 942, 941,\n",
+    "    386, 462, 47, 418, 907, 344, 236, 375, 823, 566, 597, 978, 328, 615, 953, 345,\n",
+    "    399, 162, 758, 219, 918, 237, 412, 566, 826, 248, 866, 950, 626, 949, 687, 217,\n",
+    "    815, 67, 104, 58, 512, 24, 892, 894, 767, 553, 81, 379, 843, 831, 445, 742, 717,\n",
+    "    958, 609, 842, 451, 688, 753, 854, 685, 93, 857, 440, 380, 126, 721, 328, 753, 470,\n",
+    "    743, 527\n",
+    "]\n",
+    "\n",
+    "for number in numbers:\n",
+    "    print (number)\n",
+    "    if number == 237:\n",
+    "        print (\"number equals 237, loop breaks\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "More organized code is a benefit of functions!\n",
+      "More readable code is a benefit of functions!\n",
+      "Easier code reuse is a benefit of functions!\n",
+      "Allowing programmers to share and connect code together is a benefit of functions!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# could have taken out the object definition and just use return\n",
+    "\n",
+    "# Modify this function to return a list of strings as defined above\n",
+    "def list_benefits():\n",
+    "    string = [\"More organized code\", \"More readable code\", \"Easier code reuse\",\n",
+    "               \"Allowing programmers to share and connect code together\"]\n",
+    "    return string\n",
+    "\n",
+    "# Modify this function to concatenate to each benefit - \" is a benefit of functions!\"\n",
+    "def build_sentence(benefit):\n",
+    "    sentence = \"%s is a benefit of functions!\" % benefit\n",
+    "    return sentence\n",
+    "\n",
+    "def name_the_benefits_of_functions():\n",
+    "    list_of_benefits = list_benefits()\n",
+    "    for benefit in list_of_benefits:\n",
+    "        print(build_sentence(benefit))\n",
+    "\n",
+    "name_the_benefits_of_functions()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "classes and objects\n",
+    "\n",
+    "I need more work w/ classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Far is a red convertible worth $60000.00.\n",
+      "Jump is a blue van worth $10000.00.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vehicle:\n",
+    "    name = \"\"\n",
+    "    kind = \"\"\n",
+    "    color = \"\"\n",
+    "    value = 100.00\n",
+    "    def description(self):\n",
+    "        desc_str = \"%s is a %s %s worth $%.2f.\" % (self.name, self.color, self.kind, self.value)\n",
+    "        return desc_str\n",
+    "\n",
+    "car1 = Vehicle()\n",
+    "car1.name = \"Far\"\n",
+    "car1.kind = \"convertible\"\n",
+    "car1.color = \"red\"\n",
+    "car1.value = 60000.00\n",
+    "car2 = Vehicle()\n",
+    "car2.name = \"Jump\"\n",
+    "car2.kind = \"van\"\n",
+    "car2.color = \"blue\"\n",
+    "car2.value = 10000.00\n",
+    "\n",
+    "# test code\n",
+    "print(car1.description())\n",
+    "print(car2.description())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "dictionaries\n",
+    "\n",
+    "I need more work w/ dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jake is listed in the phonebook.\n",
+      "Jill is not listed in the phonebook.\n"
+     ]
+    }
+   ],
+   "source": [
+    "phonebook = {\n",
+    "    \"John\" : 938477566,\n",
+    "    \"Jack\" : 938377264,\n",
+    "    \"Jill\" : 947662781\n",
+    "}\n",
+    "\n",
+    "phonebook[\"Jake\"] = 938273442 \n",
+    "phonebook.pop(\"Jill\")\n",
+    "\n",
+    "\n",
+    "# testing code\n",
+    "if \"Jake\" in phonebook:\n",
+    "    print(\"Jake is listed in the phonebook.\")\n",
+    "if \"Jill\" not in phonebook:\n",
+    "    print(\"Jill is not listed in the phonebook.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "modules and packages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A', 'ASCII', 'DEBUG', 'DOTALL', 'I', 'IGNORECASE', 'L', 'LOCALE', 'M', 'MULTILINE', 'Match', 'Pattern', 'RegexFlag', 'S', 'Scanner', 'T', 'TEMPLATE', 'U', 'UNICODE', 'VERBOSE', 'X', '_MAXCACHE', '__all__', '__builtins__', '__cached__', '__doc__', '__file__', '__loader__', '__name__', '__package__', '__spec__', '__version__', '_cache', '_compile', '_compile_repl', '_expand', '_locale', '_pickle', '_special_chars_map', '_subx', 'compile', 'copyreg', 'enum', 'error', 'escape', 'findall', 'finditer', 'fullmatch', 'functools', 'match', 'purge', 'search', 'split', 'sre_compile', 'sre_parse', 'sub', 'subn', 'template']\n",
+      "['findall', 'finditer']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "fnc_list = dir(re)\n",
+    "find_list = []\n",
+    "\n",
+    "print (fnc_list)\n",
+    "for fnc in fnc_list:\n",
+    "    if 'find' in fnc:\n",
+    "        find_list.append(fnc)\n",
+    "        \n",
+    "find_list.sort()\n",
+    "print (find_list)"
+   ]
   }
  ],
  "metadata": {
