--- a/location_services/python_training/j_datasciencebasics.ipynb
+++ b/location_services/python_training/j_datasciencebasics.ipynb
@@ -1,6 +1,131 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "numpy arrays\n",
+    "\n",
+    "need more practice with numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "[23.34925219 27.88755755 28.75558507 25.48723993 23.87257618 25.84368152]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([23.34925219, 27.88755755, 28.75558507, 25.48723993, 23.87257618,\n",
+       "       25.84368152])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "height = [1.87, 1.87, 1.82, 1.91, 1.90, 1.85]\n",
+    "weight = [81.65, 97.52, 95.25, 92.98, 86.18, 88.45]\n",
+    "\n",
+    "import numpy as np\n",
+    "np_height = np.array(height)\n",
+    "np_weight = np.array(weight)\n",
+    "\n",
+    "print(type(np_height))\n",
+    "\n",
+    "bmi = np_weight / np_height ** 2\n",
+    "print(bmi)\n",
+    "\n",
+    "bmi[bmi > 23]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[179.63  214.544 209.55  204.556 189.596 194.59 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "weight_kg = [81.65, 97.52, 95.25, 92.98, 86.18, 88.45]\n",
+    "\n",
+    "import numpy as np\n",
+    "np_weight_kg = np.array(weight_kg)\n",
+    "\n",
+    "np_weight_lbs = np_weight_kg * 2.2\n",
+    "\n",
+    "print(np_weight_lbs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pandas basics\n",
+    "\n",
+    "data frame: made via dictionary or import csv\n",
+    "columns: [] means series or [[]] means dataframe\n",
+    "rows = obsverations\n",
+    "data selection: loc = label based, iloc = integer based\n",
+    "\n",
+    "what is the difference between panda dataframe and series?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "# Import pandas as pd\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Import the cars.csv data: cars\n",
+    "cars = pd.read_csv('cars.csv')\n",
+    "\n",
+    "# Print out cars\n",
+    "print(cars)\n",
+    "'''"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
