edited notebook. added pandas and data processing info

--- a/location_services/python_training/j_reviewguide.ipynb
+++ b/location_services/python_training/j_reviewguide.ipynb
@@ -18,7 +18,7 @@
     "    # comments\n",
     "    ''' function docstring '''\n",
     "\n",
-    "comparison and boolean operators\n",
+    "comparison and boolean operators:\n",
     "\n",
     "    == \n",
     "    != = not equal to\n",
@@ -26,7 +26,6 @@
     "    >= = greater than or equal to\n",
     "    is = == for boolean\n",
     "    is not = != for boolean\n",
-    "    \n",
     "    and\n",
     "    or\n",
     "    not\n",
@@ -35,11 +34,8 @@
     "    if:\n",
     "    elif:\n",
     "    else:\n",
-    "    \n",
     "    while:\n",
-    "    \n",
-    "    for i in range(0,10,1):\n",
-    "        \n",
+    "    for i in range(0,10,1):   \n",
     "    break = exit a for or while loop, if executed inside loop else is skipped\n",
     "    continue = skip current block and return to for or while statement"
    ]
@@ -95,11 +91,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "PANDAS\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "creating a dataframe:\n",
+    "    df = pd.DataFrame({py_dictionary})\n",
+    "    \n",
+    "indexing dataframe:\n",
+    "    #loc = label based, iloc = integer based\n",
+    "    df[[\"columnname\", \"columnname\"]] #indexing columns\n",
+    "        each column = series\n",
+    "    condition = df[df[\"height\"] > 5] #indexing rows w/ conditional\n",
+    "    removing_null = df[df[\"columnname\"].notna()] #returns rows w/ no \n",
+    "        null values\n",
+    "    specific_rowcolumn = df.loc[df[\"columnname\"] > 5, \"columnname\"] \n",
+    "        #label based, before comma = rows, after comma is columns\n",
+    "    specific_rowcolumn = df.iloc[9:24, 2:5] #integer based\n",
+    "    \n",
+    "df[columnname].shape #gives num rows and columns\n",
+    "    \n",
+    "displaying dataframe:\n",
+    "    df.head(nfirstrows)\n",
+    "    df.tail(nlastrows)\n",
+    "    \n",
+    "reading and writing csv data:\n",
+    "    df = pd.read_csv(\"filename.csv\") #will read file into dataframe\n",
+    "    \n",
+    "exporting dataframe:\n",
+    "    df.to_csv(\"filename\")\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,7 +137,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DATA FRAMES"
+    "DATA FRAMES\n",
+    "\n",
+    "2D data strucutre (table) that can store data of diff types in columns\n",
+    "each column in dataframe is series"
    ]
   },
   {
