--- a/location_services/python_training/j_pythonbasics.ipynb
+++ b/location_services/python_training/j_pythonbasics.ipynb
@@ -278,7 +278,7 @@
     "if number > 15:\n",
     "    print(\"1\")\n",
     "\n",
-    "if first_array:\n",
+    "if first_array: #shorthand for if it exists\n",
     "    print(\"2\")\n",
     "\n",
     "if len(second_array) == 2:\n",
